import React from 'react';
import { mount } from 'enzyme';
import { ThemeProvider } from 'styled-components';
import { theme } from 'mcs-lite-theme';
import DataChannelAdapter from '../DataChannelAdapter';

describe('DataChannelAdapter', () => {
  it('should render GPIO_CONTROL correctly with default value to N/A', () => {
    const wrapper = mount(
      <ThemeProvider theme={theme}>
        <DataChannelAdapter
          dataChannelProps={{
            id: 'id',
            type: 'GPIO_CONTROL',
            values: {},
            format: {},
          }}
          eventHandler={() => {}}
        />
      </ThemeProvider>,
    );

    expect(wrapper.find(DataChannelAdapter)).toMatchSnapshot();
  });

  it('should render GPIO_CONTROL correctly with Low', () => {
    const wrapper = mount(
      <ThemeProvider theme={theme}>
        <DataChannelAdapter
          dataChannelProps={{
            id: 'id',
            type: 'GPIO_CONTROL',
            values: { value: 0 },
            format: {},
          }}
          eventHandler={() => {}}
        />
      </ThemeProvider>,
    );

    expect(wrapper.find(DataChannelAdapter)).toMatchSnapshot();
  });

  it('should render GPIO_CONTROL correctly with High', () => {
    const wrapper = mount(
      <ThemeProvider theme={theme}>
        <DataChannelAdapter
          dataChannelProps={{
            id: 'id',
            type: 'GPIO_CONTROL',
            values: { value: 1 },
            format: {},
          }}
          eventHandler={() => {}}
        />
      </ThemeProvider>,
    );

    expect(wrapper.find(DataChannelAdapter)).toMatchSnapshot();
  });
});
