// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render GPIO_CONTROL correctly with High 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "GPIO_CONTROL",
      "values": Object {
        "value": 1,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlRange
    labels={
      Array [
        "Low",
        "High",
      ]
    }
    onChange={[Function]}
    onSubmit={[Function]}
    value={1}
    valueMapper={[Function]}
  >
    <ControlRange__Container>
      <div
        className="ControlRange__Container-ispxkc kQpIsI"
      >
        <ControlRange__LabelWrapper
          labels={
            Array [
              "Low",
              "High",
            ]
          }
        >
          <div
            className="ControlRange__LabelWrapper-hpKjGx bfHWDZ"
          >
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK dulPtE"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      Low
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK dulPtE"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      High
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
          </div>
        </ControlRange__LabelWrapper>
        <ControlRange__InputWrapper
          labels={
            Array [
              "Low",
              "High",
            ]
          }
        >
          <div
            className="ControlRange__InputWrapper-fklkwO fpvHuS"
          >
            <ControlRange__ValueWrapper
              color="grayBase"
            >
              <P
                className="ControlRange__ValueWrapper-jxMKxr kFWjXk"
                color="grayBase"
              >
                <Component
                  className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                  color="grayBase"
                >
                  <div
                    className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    Current value: 
                    <ControlRange__Value
                      color="primary"
                    >
                      <P
                        className="ControlRange__Value-kXycxr glmUBq"
                        color="primary"
                      >
                        <Component
                          className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                          color="primary"
                        >
                          <p
                            className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                            color="primary"
                          >
                            High
                          </p>
                        </Component>
                      </P>
                    </ControlRange__Value>
                  </div>
                </Component>
              </P>
            </ControlRange__ValueWrapper>
            <InputRange
              kind="primary"
              max={1}
              min={0}
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              step={1}
              type="range"
              value={1}
            >
              <input
                className="InputRange__InputRange-uGAsR lghldr"
                kind="primary"
                max={1}
                min={0}
                onChange={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                step={1}
                type="range"
                value={1}
              />
            </InputRange>
          </div>
        </ControlRange__InputWrapper>
      </div>
    </ControlRange__Container>
  </ControlRange>
</DataChannelAdapter>
`;

exports[`should render GPIO_CONTROL correctly with Low 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "GPIO_CONTROL",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlRange
    labels={
      Array [
        "Low",
        "High",
      ]
    }
    onChange={[Function]}
    onSubmit={[Function]}
    value={0}
    valueMapper={[Function]}
  >
    <ControlRange__Container>
      <div
        className="ControlRange__Container-ispxkc kQpIsI"
      >
        <ControlRange__LabelWrapper
          labels={
            Array [
              "Low",
              "High",
            ]
          }
        >
          <div
            className="ControlRange__LabelWrapper-hpKjGx bfHWDZ"
          >
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK dulPtE"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      Low
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK dulPtE"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      High
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
          </div>
        </ControlRange__LabelWrapper>
        <ControlRange__InputWrapper
          labels={
            Array [
              "Low",
              "High",
            ]
          }
        >
          <div
            className="ControlRange__InputWrapper-fklkwO fpvHuS"
          >
            <ControlRange__ValueWrapper
              color="grayBase"
            >
              <P
                className="ControlRange__ValueWrapper-jxMKxr kFWjXk"
                color="grayBase"
              >
                <Component
                  className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                  color="grayBase"
                >
                  <div
                    className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    Current value: 
                    <ControlRange__Value
                      color="primary"
                    >
                      <P
                        className="ControlRange__Value-kXycxr glmUBq"
                        color="primary"
                      >
                        <Component
                          className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                          color="primary"
                        >
                          <p
                            className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                            color="primary"
                          >
                            Low
                          </p>
                        </Component>
                      </P>
                    </ControlRange__Value>
                  </div>
                </Component>
              </P>
            </ControlRange__ValueWrapper>
            <InputRange
              kind="primary"
              max={1}
              min={0}
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              step={1}
              type="range"
              value={0}
            >
              <input
                className="InputRange__InputRange-uGAsR lghldr"
                kind="primary"
                max={1}
                min={0}
                onChange={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                step={1}
                type="range"
                value={0}
              />
            </InputRange>
          </div>
        </ControlRange__InputWrapper>
      </div>
    </ControlRange__Container>
  </ControlRange>
</DataChannelAdapter>
`;

exports[`should render GPIO_CONTROL correctly with default value to N/A 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "GPIO_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlRange
    labels={
      Array [
        "Low",
        "High",
      ]
    }
    onChange={[Function]}
    onSubmit={[Function]}
    value=""
    valueMapper={[Function]}
  >
    <ControlRange__Container>
      <div
        className="ControlRange__Container-ispxkc kQpIsI"
      >
        <ControlRange__LabelWrapper
          labels={
            Array [
              "Low",
              "High",
            ]
          }
        >
          <div
            className="ControlRange__LabelWrapper-hpKjGx bfHWDZ"
          >
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK dulPtE"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      Low
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
            <ControlRange__LabelItem>
              <div
                className="ControlRange__LabelItem-kiIalK dulPtE"
              >
                <P
                  color="grayBase"
                >
                  <Component
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    <p
                      className="P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      High
                    </p>
                  </Component>
                </P>
              </div>
            </ControlRange__LabelItem>
          </div>
        </ControlRange__LabelWrapper>
        <ControlRange__InputWrapper
          labels={
            Array [
              "Low",
              "High",
            ]
          }
        >
          <div
            className="ControlRange__InputWrapper-fklkwO fpvHuS"
          >
            <ControlRange__ValueWrapper
              color="grayBase"
            >
              <P
                className="ControlRange__ValueWrapper-jxMKxr kFWjXk"
                color="grayBase"
              >
                <Component
                  className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                  color="grayBase"
                >
                  <div
                    className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    Current value: 
                    <ControlRange__Value
                      color="primary"
                    >
                      <P
                        className="ControlRange__Value-kXycxr glmUBq"
                        color="primary"
                      >
                        <Component
                          className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                          color="primary"
                        >
                          <p
                            className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                            color="primary"
                          >
                            N/A
                          </p>
                        </Component>
                      </P>
                    </ControlRange__Value>
                  </div>
                </Component>
              </P>
            </ControlRange__ValueWrapper>
            <InputRange
              kind="primary"
              max={1}
              min={0}
              onChange={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              step={1}
              type="range"
              value=""
            >
              <input
                className="InputRange__InputRange-uGAsR lghldr"
                kind="primary"
                max={1}
                min={0}
                onChange={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                step={1}
                type="range"
                value=""
              />
            </InputRange>
          </div>
        </ControlRange__InputWrapper>
      </div>
    </ControlRange__Container>
  </ControlRange>
</DataChannelAdapter>
`;
